--- a/wvs.html
+++ b/wvs.html
@@ -42,10 +42,10 @@
             <a href="/about.html">ABOUT</a>
         </li>
         <li>
-            <a href="/wvs.html">NTUWVS</a>
+            <a href="">NTUWVS</a>
         </li>
         <li>
-            <a href="/act.html">ACTIVITY</a>
+            <a href="#">ACTIVITY</a>
         </li>
     </ul>
     <section class="section" id="home-section">
@@ -80,45 +80,8 @@
         </div>
 
     </section>
-    <!--about section-->
-    <section class="section" id="about-section">
-        <h1 class="section-title">ABOUT</h1>
-        <article class="article">
-            <span class="about-secondary-color">
-                <hr class="article-line">
-                <h2 class="article-title">education</h2>
-            </span>
-            <div class="article-content">
-                <ul id="article-list">
-                    <li>
-                        <img id="ntu-logo" src="pic/ntu.png" alt="ntou 校徽">Nation Taiwan University School of Forestry and Resources Conservation
-                    </li>
-                </ul>
-            </div>
-        </article>
 
-
-        <article class="article">
-            <span class="about-secondary-color">
-                <hr class="article-line">
-                <h2 class="article-title">Jacky Hsu</h2>
-            </span>
-            <div class="article-content">
-                <ul id="article-list">
-                    <p>
-                        <li>Hi!</li>
-                        <li>我是臺大森林大四的學生 許家齊</li>
-                        <li>喜歡嘗試各種我覺得有趣的事，是個不務正業的人</li>
-                        <li>目前努力將自己的觸手伸向網頁和商業，目標是擁有一間自己的新創公司</li>
-                        <li>因為我覺得不論是藍海還是紅海</li>
-                        <li>唯有出海，才能真正掌握自己的命運，才是真正的自由!</li>
-                    </p>
-                </ul>
-            </div>
-        </article>
-
-    </section>
-    <!--skill section-->
+    <!--wvs section-->
     <section class="section" id="ntuwvs-section">
         <h1 class="section-title">NTUWVS</h1>
 
@@ -216,48 +179,7 @@
                 <span class="sr-only">Next</span>
             </a>
         </div>
-        <!--chrome extension-->
-        <article class="article">
-            <span class="works-secondary-color">
-                <hr class="article-line">
-                <h2 class="article-title">樂於參加各種活動</h2>
-            </span>
-            <div class="article-content">
-                <ul id="article-list">
-                    <p>
-                        <li>2015 新生盃壘球賽、運動會游泳接力</li>
-                        <li>2015 臺大森林之夜-大一舞、大一劇、跨屆Band主唱</li>
-                        <li>2015 臺大森林營-隊輔</li>
-                        <li>2016 臺大森林系羽球隊-副隊長</li>
-                        <li>2016 臺大森林之夜-大二舞、大二劇、公關部長</li>
-                        <li>2017 臺大森林之夜-跨屆舞</li>
-                        <li></li>
 
-                    </p>
-                </ul>
-            </div>
-        </article>
-
-        <!--android app-->
-        <article class="article">
-            <span class="works-secondary-color">
-                <hr class="article-line">
-                <h2 class="article-title">其他興趣</h2>
-            </span>
-            <div class="article-content">
-                <ul id="article-list">
-                    <p>
-                        <li>唱歌</li>
-                        <li>就算會有一天，沒人與我合唱，至少在我的心中，還有個尚未崩壞的地方</li>
-                        <li>旅遊</li>
-                        <li>就算只是市區的行腳也可以是一趟精彩的旅程</li>
-                        <li>詩</li>
-                        <li>醉過才知酒濃，愛過才知情重。妳不能作我的詩，正如我不能做你的夢。</li>
-                        <li></li>
-
-                    </p>
-                </ul>
-            </div>
 </body>
 
 </html>
