--- a/index.html
+++ b/index.html
@@ -34,22 +34,37 @@
 </head>
 
 <body>
-    <ul class="nav nav-tabs">
-        <li class="active">
-            <a href="/index.html">Home</a>
-        </li>
-        <li>
-            <a href="/about.html">ABOUT</a>
-        </li>
-        <li>
-            <a href="/wvs.html">NTUWVS</a>
-        </li>
-        <li>
-            <a href="/act.html">ACTIVITY</a>
-        </li>
-    </ul>
+    <!--TODO:置頂導覽列-如何靠右?-->
+    <nav class="nav">
+
+        <ul>
+            <li class="current">
+                <a class="nav-link" href="./index.html">Home</a>
+            </li>
+            <li>
+                <a class="nav-link" href="/about.html">ABOUT</a>
+            </li>
+            <li>
+                <a class="nav-link" href="/wvs.html">NTUWVS</a>
+            </li>
+            <li>
+                <a class="nav-link" href="/act.html">ACTIVITY</a>
+            </li>
+            <a href="https://www.facebook.com/Jackyyoyoyo" float:right>
+                <div class="info-circle">
+                    <i class="fab fa-facebook-f" ari-alla-hidden="true"></i>
+                </div>
+            </a>
+            <a href="mailto:jacky12463890@gmail.com" float:right>
+                <div class="info-circle" id="email">
+                    <i class="fa fa-envelope-o" aria-hidden="true"></i>
+
+                </div>
+            </a>
+        </ul>
+    </nav>
     <section class="section" id="home-section">
-      
+
         <span id="center-wrapper">
             <h3 class="solgan">Hello , I am Jacky Hsu</h3>
             <img id="head" src="pic/sing.png">
