--- a/wvs.html
+++ b/wvs.html
@@ -63,27 +63,28 @@
             </a>
         </ul>
     </nav>
-    <span id="center-wrapper">
-        <h3 class="solgan">Hello , I am Jacky Hsu</h3>
-        <img id="head" src="pic/sing.png">
-        <h3 class="solgan">Just try it !</h3>
-    </span>
-    <div id="circles-wrapper">
-        <div id="email_dialog">
-            jacky12463890@gmail.com
-        </div>
-        <a href="https://www.facebook.com/Jackyyoyoyo">
-            <div class="info-circle">
-                <i class="fab fa-facebook-f" ari-alla-hidden="true"></i>
+    <section class="section" id="home-section-wvs">
+        <span id="center-wrapper">
+            <h3 class="solgan">Hello , I am Jacky Hsu</h3>
+            <img id="head" src="pic/sing.png">
+            <h3 class="solgan">Just try it !</h3>
+        </span>
+        <div id="circles-wrapper">
+            <div id="email_dialog">
+                jacky12463890@gmail.com
             </div>
-        </a>
-        <a href="mailto:jacky12463890@gmail.com">
-            <div class="info-circle" id="email">
-                <i class="fa fa-envelope-o" aria-hidden="true"></i>
+            <a href="https://www.facebook.com/Jackyyoyoyo">
+                <div class="info-circle">
+                    <i class="fab fa-facebook-f" ari-alla-hidden="true"></i>
+                </div>
+            </a>
+            <a href="mailto:jacky12463890@gmail.com">
+                <div class="info-circle" id="email">
+                    <i class="fa fa-envelope-o" aria-hidden="true"></i>
 
-            </div>
-        </a>
-    </div>
+                </div>
+            </a>
+        </div>
 
     </section>
 
@@ -112,6 +113,32 @@
                 $('.coverflow').css('max-width', $('.coverflow img').width());
             });
         </script>
+        <!--another-->
+        <article class="article">
+            <span class="works-secondary-color">
+                <hr class="article-line">
+                <h2 class="article-title">我心中的wvs</h2>
+            </span>
+            <div class="article-content">
+                <ul id="article-list">
+                    <p>
+                        <li>雖然名為世界志工</li>
+                        <li>但我們不但會出國服務 也會前往花蓮</li>
+                        <li>和與學校僅有咫尺之遙的老人院服務</li>
+                        <li>因為對我們來說</li>
+                        <li>不論是花蓮偏鄉的國小</li>
+                        <li>還是大隱隱於市的老人院</li>
+                        <li>和平時生活在這繁華喧囂之中的我們</li>
+                        <li>都處於不同的世界</li>
+                        <li>世界志工社就是連接這些世界的橋樑</li>
+                        <li>而我們穿梭於其上</li>
+                        <li>親手傳遞溫暖</li>
+                        <li>也學會看見每一個世界的美</li>
+
+                    </p>
+                </ul>
+            </div>
+        </article>
         <article class="article">
             <span class="works-secondary-color">
                 <hr class="article-line">
@@ -137,7 +164,7 @@
     </section>
     <!--activity-->
     <section class="section" id="activity-section">
-        <h1 class="section-title">Activity</h1>
+        <h1 class="section-title">Photo</h1>
 
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" !important>
             <ol class="carousel-indicators">
@@ -152,28 +179,28 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="d-block w-100" src="pic/band.png" alt="First slide">
+                    <img class="d-block w-100" src="pic/wvs08.png" alt="First slide">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="pic/dance01.png" alt="Second slide">
+                    <img class="d-block w-100" src="pic/wvs01.png" alt="Second slide">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="pic/dance02.png" alt="Third slide">
+                    <img class="d-block w-100" src="pic/wvs02.png" alt="Third slide">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="pic/band01.png" alt="Fourth slide">
+                    <img class="d-block w-100" src="pic/wvs03.png" alt="Fourth slide">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="pic/dance03.png" alt="Fifth slide">
+                    <img class="d-block w-100" src="pic/wvs04.png" alt="Fifth slide">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="pic/money01.png" alt="Sixth slide">
+                    <img class="d-block w-100" src="pic/wvs05.png" alt="Sixth slide">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="pic/dance04.png" alt="Seventh slide">
+                    <img class="d-block w-100" src="pic/wvs06.png" alt="Seventh slide">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="pic/camp01.png" alt="Eighth slide">
+                    <img class="d-block w-100" src="pic/wvs07.png" alt="Eighth slide">
                 </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
