--- a/about.html
+++ b/about.html
@@ -63,27 +63,29 @@
             </a>
         </ul>
     </nav>
-    <span id="center-wrapper">
-        <h3 class="solgan">Hello , I am Jacky Hsu</h3>
-        <img id="head" src="pic/sing.png">
-        <h3 class="solgan">Just try it !</h3>
-    </span>
-    <div id="circles-wrapper">
-        <div id="email_dialog">
-            jacky12463890@gmail.com
-        </div>
-        <a href="https://www.facebook.com/Jackyyoyoyo">
-            <div class="info-circle">
-                <i class="fab fa-facebook-f" ari-alla-hidden="true"></i>
-            </div>
-        </a>
-        <a href="mailto:jacky12463890@gmail.com">
-            <div class="info-circle" id="email">
-                <i class="fa fa-envelope-o" aria-hidden="true"></i>
+    <section class="section" id="home-section-about">
 
+        <span id="center-wrapper">
+            <h3 class="solgan">Hello , I am Jacky Hsu</h3>
+            <img id="head" src="pic/sing.png">
+            <h3 class="solgan">Just try it !</h3>
+        </span>
+        <div id="circles-wrapper">
+            <div id="email_dialog">
+                jacky12463890@gmail.com
             </div>
-        </a>
-    </div>
+            <a href="https://www.facebook.com/Jackyyoyoyo">
+                <div class="info-circle">
+                    <i class="fab fa-facebook-f" ari-alla-hidden="true"></i>
+                </div>
+            </a>
+            <a href="mailto:jacky12463890@gmail.com">
+                <div class="info-circle" id="email">
+                    <i class="fa fa-envelope-o" aria-hidden="true"></i>
+                </div>
+            </a>
+
+        </div>
 
     </section>
     <!--about section-->
@@ -97,7 +99,7 @@
             <div class="article-content">
                 <ul id="article-list">
                     <li>
-                        <img id="ntu-logo" src="pic/ntu.png" alt="ntou 校徽">Nation Taiwan University School of Forestry and Resources Conservation
+                        <img id="ntu-logo" src="pic/ntu.png" alt="ntu 校徽">Nation Taiwan University School of Forestry and Resources Conservation
                     </li>
                 </ul>
             </div>
@@ -146,26 +148,42 @@
             </ul>
         </div>
     </article>
+    <!--activity-->
+    <section class="section" id="activity-section">
+        <h1 class="section-title">Photo</h1>
 
-    <!--android app-->
-    <article class="article">
-        <span class="works-secondary-color">
-            <hr class="article-line">
-            <h2 class="article-title">其他興趣</h2>
-        </span>
-        <div class="article-content">
-            <ul id="article-list">
-                <p>
-                    <li>唱歌</li>
-                    <li>就算會有一天，沒人與我合唱，至少在我的心中，還有個尚未崩壞的地方</li>
-                    <li>旅遊</li>
-                    <li>就算只是市區的行腳也可以是一趟精彩的旅程</li>
-                    <li>詩</li>
-                    <li>醉過才知酒濃，愛過才知情重。妳不能作我的詩，正如我不能做你的夢。</li>
-                    <li></li>
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" !important>
+            <ol class="carousel-indicators">
+                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
 
-                </p>
-            </ul>
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img class="d-block w-100" src="pic/paper01.png" alt="First slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="pic/paper02.png" alt="Second slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="pic/paper03.png" alt="Third slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="pic/paper04.png" alt="Fourth slide">
+                </div>
+
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
         </div>
 </body>
 
