--- a/act.html
+++ b/act.html
@@ -50,40 +50,40 @@
             <li>
                 <a class="nav-link" href="/act.html">ACTIVITY</a>
             </li>
-            <a href="https://www.facebook.com/Jackyyoyoyo" float:right>
+            <a href="https://www.facebook.com/Jackyyoyoyo">
                 <div class="info-circle">
                     <i class="fab fa-facebook-f" ari-alla-hidden="true"></i>
                 </div>
             </a>
-            <a href="mailto:jacky12463890@gmail.com" float:right>
+            <a href="mailto:jacky12463890@gmail.com">
+                <div class="info-circle" id="email">
+                    <i class="fa fa-envelope-o" aria-hidden="true"></i>
+                </div>
+            </a>
+        </ul>
+    </nav>
+    <section class="section" id="home-section-act">
+        <span id="center-wrapper">
+            <h3 class="solgan">Hello , I am Jacky Hsu</h3>
+            <img id="head" src="pic/sing.png">
+            <h3 class="solgan">Just try it !</h3>
+        </span>
+        <div id="circles-wrapper">
+            <div id="email_dialog">
+                jacky12463890@gmail.com
+            </div>
+            <a href="https://www.facebook.com/Jackyyoyoyo">
+                <div class="info-circle">
+                    <i class="fab fa-facebook-f" ari-alla-hidden="true"></i>
+                </div>
+            </a>
+            <a href="mailto:jacky12463890@gmail.com">
                 <div class="info-circle" id="email">
                     <i class="fa fa-envelope-o" aria-hidden="true"></i>
 
                 </div>
             </a>
-        </ul>
-    </nav>
-    <span id="center-wrapper">
-        <h3 class="solgan">Hello , I am Jacky Hsu</h3>
-        <img id="head" src="pic/sing.png">
-        <h3 class="solgan">Just try it !</h3>
-    </span>
-    <div id="circles-wrapper">
-        <div id="email_dialog">
-            jacky12463890@gmail.com
         </div>
-        <a href="https://www.facebook.com/Jackyyoyoyo">
-            <div class="info-circle">
-                <i class="fab fa-facebook-f" ari-alla-hidden="true"></i>
-            </div>
-        </a>
-        <a href="mailto:jacky12463890@gmail.com">
-            <div class="info-circle" id="email">
-                <i class="fa fa-envelope-o" aria-hidden="true"></i>
-
-            </div>
-        </a>
-    </div>
 
     </section>
     <!--about section-->
@@ -119,6 +119,10 @@
                     <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
                     <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
                     <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="8"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="9"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="10"></li>
+
                 </ol>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
@@ -145,58 +149,64 @@
                     <div class="carousel-item">
                         <img class="d-block w-100" src="pic/camp01.png" alt="Eighth slide">
                     </div>
-                </div>
-                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
-            </div>
-            <!--chrome extension-->
-            <article class="article">
-                <span class="works-secondary-color">
-                    <hr class="article-line">
-                    <h2 class="article-title">樂於參加各種活動</h2>
-                </span>
-                <div class="article-content">
-                    <ul id="article-list">
-                        <p>
-                            <li>2015 新生盃壘球賽、運動會游泳接力</li>
-                            <li>2015 臺大森林之夜-大一舞、大一劇、跨屆Band主唱</li>
-                            <li>2015 臺大森林營-隊輔</li>
-                            <li>2016 臺大森林系羽球隊-副隊長</li>
-                            <li>2016 臺大森林之夜-大二舞、大二劇、公關部長</li>
-                            <li>2017 臺大森林之夜-跨屆舞</li>
-                            <li></li>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="pic/act02.png" alt="Ninth slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="pic/band02.png" alt="Tenth slide">
+                    </div>
 
-                        </p>
-                    </ul>
+                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
                 </div>
-            </article>
+                <!--chrome extension-->
+                <article class="article">
+                    <span class="works-secondary-color">
+                        <hr class="article-line">
+                        <h2 class="article-title">樂於參加各種活動</h2>
+                    </span>
+                    <div class="article-content">
+                        <ul id="article-list">
+                            <p>
+                                <li>2015 新生盃壘球賽、運動會游泳接力</li>
+                                <li>2015 臺大森林之夜-大一舞、大一劇、跨屆Band主唱</li>
+                                <li>2015 臺大森林營-隊輔</li>
+                                <li>2016 臺大森林系羽球隊-副隊長</li>
+                                <li>2016 臺大森林之夜-大二舞、大二劇、公關部長</li>
+                                <li>2017 臺大森林之夜-跨屆舞</li>
+                                <li></li>
 
-            <!--android app-->
-            <article class="article">
-                <span class="works-secondary-color">
-                    <hr class="article-line">
-                    <h2 class="article-title">其他興趣</h2>
-                </span>
-                <div class="article-content">
-                    <ul id="article-list">
-                        <p>
-                            <li>唱歌</li>
-                            <li>就算會有一天，沒人與我合唱，至少在我的心中，還有個尚未崩壞的地方</li>
-                            <li>旅遊</li>
-                            <li>就算只是市區的行腳也可以是一趟精彩的旅程</li>
-                            <li>詩</li>
-                            <li>醉過才知酒濃，愛過才知情重。妳不能作我的詩，正如我不能做你的夢。</li>
-                            <li></li>
+                            </p>
+                        </ul>
+                    </div>
+                </article>
 
-                        </p>
-                    </ul>
-                </div>
+                <!--android app-->
+                <article class="article">
+                    <span class="works-secondary-color">
+                        <hr class="article-line">
+                        <h2 class="article-title">其他興趣</h2>
+                    </span>
+                    <div class="article-content">
+                        <ul id="article-list">
+                            <p>
+                                <li>唱歌</li>
+                                <li>就算會有一天，沒人與我合唱，至少在我的心中，還有個尚未崩壞的地方</li>
+                                <li>旅遊</li>
+                                <li>就算只是市區的行腳也可以是一趟精彩的旅程</li>
+                                <li>詩</li>
+                                <li>醉過才知酒濃，愛過才知情重。妳不能作我的詩，正如我不能做你的夢。</li>
+                                <li></li>
+
+                            </p>
+                        </ul>
+                    </div>
 </body>
 
 </html>
