--- a/index.html
+++ b/index.html
@@ -50,15 +50,14 @@
             <li>
                 <a class="nav-link" href="/act.html">ACTIVITY</a>
             </li>
-            <a href="https://www.facebook.com/Jackyyoyoyo" float:right>
+            <a href="https://www.facebook.com/Jackyyoyoyo" ; style="float:right" ;>
                 <div class="info-circle">
                     <i class="fab fa-facebook-f" ari-alla-hidden="true"></i>
                 </div>
             </a>
-            <a href="mailto:jacky12463890@gmail.com" float:right>
+            <a href="mailto:jacky12463890@gmail.com" ; style="float:right" ;>
                 <div class="info-circle" id="email">
                     <i class="fa fa-envelope-o" aria-hidden="true"></i>
-
                 </div>
             </a>
         </ul>
@@ -82,7 +81,6 @@
             <a href="mailto:jacky12463890@gmail.com">
                 <div class="info-circle" id="email">
                     <i class="fa fa-envelope-o" aria-hidden="true"></i>
-
                 </div>
             </a>
         </div>
@@ -99,12 +97,11 @@
             <div class="article-content">
                 <ul id="article-list">
                     <li>
-                        <img id="ntu-logo" src="pic/ntu.png" alt="ntou 校徽">Nation Taiwan University School of Forestry and Resources Conservation
+                        <img id="ntu-logo" src="pic/ntu.png" alt="ntu 校徽">Nation Taiwan University School of Forestry and Resources Conservation
                     </li>
                 </ul>
             </div>
         </article>
-
 
         <article class="article">
             <span class="about-secondary-color">
@@ -188,6 +185,10 @@
                 <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
                 <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
                 <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="8"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="9"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="10"></li>
+
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
@@ -214,6 +215,13 @@
                 <div class="carousel-item">
                     <img class="d-block w-100" src="pic/camp01.png" alt="Eighth slide">
                 </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="pic/act02.png" alt="Ninth slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="pic/band02.png" alt="Tenth slide">
+                </div>
+
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -246,7 +254,7 @@
             </div>
         </article>
 
-        <!--android app-->
+        <!--another-->
         <article class="article">
             <span class="works-secondary-color">
                 <hr class="article-line">
@@ -266,6 +274,10 @@
                     </p>
                 </ul>
             </div>
+        </article>
+        <a href="#" class="back-to-top">︽</a>
+
+
 </body>
 
 </html>
