--- a/wvs.html
+++ b/wvs.html
@@ -39,7 +39,7 @@
 
         <ul>
             <li class="current">
-                <a class="nav-link" href="./index.html">Home</a>
+                <a class="nav-link" href="/index.html">Home</a>
             </li>
             <li>
                 <a class="nav-link" href="/about.html">ABOUT</a>
