--- a/aboutme/about.html
+++ b/aboutme/about.html
@@ -42,13 +42,13 @@
                 <a class="nav-link" href="/index.html">Home</a>
             </li>
             <li>
-                <a class="nav-link" href="/about.html">ABOUT</a>
+                <a class="nav-link" href="/aboutme/about.html">ABOUT</a>
             </li>
             <li>
-                <a class="nav-link" href="/wvs.html">NTUWVS</a>
+                <a class="nav-link" href="/aboutme/wvs.html">NTUWVS</a>
             </li>
             <li>
-                <a class="nav-link" href="/act.html">ACTIVITY</a>
+                <a class="nav-link" href="/aboutme/act.html">ACTIVITY</a>
             </li>
             <a href="https://www.facebook.com/Jackyyoyoyo" float:right>
                 <div class="info-circle">
