--- a/about.html
+++ b/about.html
@@ -39,16 +39,16 @@
 
         <ul>
             <li class="current">
-                <a class="nav-link" href="/index.html">Home</a>
+                <a class="nav-link" href="./index.html">Home</a>
             </li>
             <li>
-                <a class="nav-link" href="/about.html">ABOUT</a>
+                <a class="nav-link" href="./about.html">ABOUT</a>
             </li>
             <li>
-                <a class="nav-link" href="/wvs.html">NTUWVS</a>
+                <a class="nav-link" href="./wvs.html">NTUWVS</a>
             </li>
             <li>
-                <a class="nav-link" href="/act.html">ACTIVITY</a>
+                <a class="nav-link" href="./act.html">ACTIVITY</a>
             </li>
             <a href="https://www.facebook.com/Jackyyoyoyo" float:right>
                 <div class="info-circle">
@@ -63,7 +63,8 @@
             </a>
         </ul>
     </nav>
-    <section class="section" id="home-section-wvs">
+    <section class="section" id="home-section-about">
+
         <span id="center-wrapper">
             <h3 class="solgan">Hello , I am Jacky Hsu</h3>
             <img id="head" src="pic/sing.png">
@@ -81,87 +82,72 @@
             <a href="mailto:jacky12463890@gmail.com">
                 <div class="info-circle" id="email">
                     <i class="fa fa-envelope-o" aria-hidden="true"></i>
-
                 </div>
             </a>
+
         </div>
 
     </section>
-
-    <!--wvs section-->
-    <section class="section" id="ntuwvs-section">
-        <h1 class="section-title">NTUWVS</h1>
-
-
-        <div class="slider_container coverflow">
-            <div>
-                <img src="pic/wvs03.png" alt="pure css3 slider" width="100%" height="40%" />
-                <span class="info">Jacky Hsu</span>
-            </div>
-            <div>
-                <img src="pic/wvs02.png" alt="pure css3 slider" width="100%" height="40%" />
-                <span class="info">Jacky Hsu</span>
-            </div>
-            <div>
-                <img src="pic/wvs04.png" alt="pure css3 slider" width="100%" height="40%" />
-                <span class="info">Jacky Hsu</span>
-            </div>
-
-        </div>
-        <script>
-            $(function () {
-                $('.coverflow').css('max-width', $('.coverflow img').width());
-            });
-        </script>
-        <!--another-->
+    <!--about section-->
+    <section class="section" id="about-section">
+        <h1 class="section-title">ABOUT</h1>
         <article class="article">
-            <span class="works-secondary-color">
+            <span class="about-secondary-color">
                 <hr class="article-line">
-                <h2 class="article-title">我心中的wvs</h2>
+                <h2 class="article-title">education</h2>
+            </span>
+            <div class="article-content">
+                <ul id="article-list">
+                    <li>
+                        <img id="ntu-logo" src="pic/ntu.png" alt="ntu 校徽">Nation Taiwan University School of Forestry and Resources Conservation
+                    </li>
+                </ul>
+            </div>
+        </article>
+
+
+        <article class="article">
+            <span class="about-secondary-color">
+                <hr class="article-line">
+                <h2 class="article-title">Jacky Hsu</h2>
             </span>
             <div class="article-content">
                 <ul id="article-list">
                     <p>
-                        <li>雖然名為世界志工</li>
-                        <li>但我們不但會出國服務 也會前往花蓮</li>
-                        <li>和與學校僅有咫尺之遙的老人院服務</li>
-                        <li>因為對我們來說</li>
-                        <li>不論是花蓮偏鄉的國小</li>
-                        <li>還是大隱隱於市的老人院</li>
-                        <li>和平時生活在這繁華喧囂之中的我們</li>
-                        <li>都處於不同的世界</li>
-                        <li>世界志工社就是連接這些世界的橋樑</li>
-                        <li>而我們穿梭於其上</li>
-                        <li>親手傳遞溫暖</li>
-                        <li>也學會看見每一個世界的美</li>
-
+                        <li>Hi!</li>
+                        <li>我是臺大森林大四的學生 許家齊</li>
+                        <li>喜歡嘗試各種我覺得有趣的事，是個不務正業的人</li>
+                        <li>目前努力將自己的觸手伸向網頁和商業，目標是擁有一間自己的新創公司</li>
+                        <li>因為我覺得不論是藍海還是紅海</li>
+                        <li>唯有出海，才能真正掌握自己的命運，才是真正的自由!</li>
                     </p>
                 </ul>
             </div>
         </article>
-        <article class="article">
-            <span class="works-secondary-color">
-                <hr class="article-line">
-                <h2 class="article-title">我的wvs大事記</h2>
-            </span>
-            <div class="article-content">
-                <ul id="article-list">
-                    <p>
-                        <li>2015臺大世界志工社寒假花蓮奇美服務隊-隊員</li>
-                        <li>擔任隊輔及負責營隊故事與營歌設計</li>
-                        <li>2015臺大世界志工社印度拉達克服務隊-隊員</li>
-                        <li>負責文化教案向印度國中、小學童介紹臺灣與臺灣文化</li>
-                        <li>2016臺大世界志工社活動部-部員</li>
-                        <li>負責各類活動籌辦與老人院服務</li>
-                        <li>2016臺大世界志工社寒假花蓮奇美服務隊-隊輔長</li>
-                        <li>負責調派人力及教案與活動驗收</li>
-                        <li>2016臺大世界志工社印度拉達克服務隊-領隊</li>
-                        <li>出隊前負責各項事前規劃、聯絡與申請；出隊期間負責與當地合作夥伴溝通及協調並做出決策；出隊後之檢討與成果報告統整</li>
 
-                    </p>
-                </ul>
-            </div>
     </section>
+
+    <!--chrome extension-->
+    <article class="article">
+        <span class="works-secondary-color">
+            <hr class="article-line">
+            <h2 class="article-title">樂於參加各種活動</h2>
+        </span>
+        <div class="article-content">
+            <ul id="article-list">
+                <p>
+                    <li>2015 新生盃壘球賽、運動會游泳接力</li>
+                    <li>2015 臺大森林之夜-大一舞、大一劇、跨屆Band主唱</li>
+                    <li>2015 臺大森林營-隊輔</li>
+                    <li>2016 臺大森林系羽球隊-副隊長</li>
+                    <li>2016 臺大森林之夜-大二舞、大二劇、公關部長</li>
+                    <li>2017 臺大森林之夜-跨屆舞</li>
+                    <li></li>
+
+                </p>
+            </ul>
+        </div>
+    </article>
     <!--activity-->
     <section class="section" id="activity-section">
         <h1 class="section-title">Photo</h1>
@@ -173,35 +159,22 @@
                 <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
                 <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
                 <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
+
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="d-block w-100" src="pic/wvs08.png" alt="First slide">
+                    <img class="d-block w-100" src="pic/paper01.png" alt="First slide">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="pic/wvs01.png" alt="Second slide">
+                    <img class="d-block w-100" src="pic/paper02.png" alt="Second slide">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="pic/wvs02.png" alt="Third slide">
+                    <img class="d-block w-100" src="pic/paper03.png" alt="Third slide">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="pic/wvs03.png" alt="Fourth slide">
+                    <img class="d-block w-100" src="pic/paper04.png" alt="Fourth slide">
                 </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100" src="pic/wvs04.png" alt="Fifth slide">
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100" src="pic/wvs05.png" alt="Sixth slide">
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100" src="pic/wvs06.png" alt="Seventh slide">
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100" src="pic/wvs07.png" alt="Eighth slide">
-                </div>
+
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -212,7 +185,6 @@
                 <span class="sr-only">Next</span>
             </a>
         </div>
-
 </body>
 
 </html>
