--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@
 
         <ul>
             <li class="current">
-                <a class="nav-link" href="/index.html">Home</a>
+                <a class="nav-link" href="./index.html">Home</a>
             </li>
             <li>
-                <a class="nav-link" href="/about.html">ABOUT</a>
+                <a class="nav-link" href="./about.html">ABOUT</a>
             </li>
             <li>
-                <a class="nav-link" href="/wvs.html">NTUWVS</a>
+                <a class="nav-link" href="./wvs.html">NTUWVS</a>
             </li>
             <li>
-                <a class="nav-link" href="/act.html">ACTIVITY</a>
+                <a class="nav-link" href="./act.html">ACTIVITY</a>
             </li>
             <a href="https://www.facebook.com/Jackyyoyoyo" ; style="float:right" ;>
                 <div class="info-circle">
