--- a/act.html
+++ b/act.html
@@ -97,7 +97,7 @@
             <div class="article-content">
                 <ul id="article-list">
                     <li>
-                        <img id="ntu-logo" src="pic/ntu.png" alt="ntou 校徽">Nation Taiwan University School of Forestry and Resources Conservation
+                        <img id="ntu-logo" src="pic/ntu.png" alt="ntu 校徽">Nation Taiwan University School of Forestry and Resources Conservation
                     </li>
                 </ul>
             </div>
