--- a/act.html
+++ b/act.html
@@ -207,6 +207,7 @@
                             </p>
                         </ul>
                     </div>
+                    <a href="#" class="back-to-top">︽</a>
 </body>
 
 </html>
