--- a/wvs.html
+++ b/wvs.html
@@ -212,7 +212,7 @@
                 <span class="sr-only">Next</span>
             </a>
         </div>
-
+        <a href="#" class="back-to-top">︽</a>
 </body>
 
 </html>
