--- a/about.html
+++ b/about.html
@@ -185,6 +185,7 @@
                 <span class="sr-only">Next</span>
             </a>
         </div>
+        <a href="#" class="back-to-top">︽</a>
 </body>
 
 </html>
